# cpp-extended-stats

./: .env.example  README.md  metricsDraft.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: metrics.tex
docs/evaluation/design-patterns-cpp/: design-patterns-cpp.md  design-patterns-cpp.xml
docs/evaluation/tinyxml2/: tinyxml2.md  tinyxml2.xml
src/: cpp_ext_stats.py  main.py  metric_list.py
src/cursor_classes/: attribute_cursor.py  class_cursor.py  file_cursor.py  method_cursor.py
src/metric_classes/: attribute_hiding_factor.py  attribute_inheritance_factor.py  class_metric.py  depth_of_inheritance_tree.py  method_hiding_factor.py  method_inheritance_factor.py  method_metric.py  number_of_children.py  number_of_classes.py  number_of_files.py  number_of_messages.py  polymorphism_factor.py  response_for_a_class.py
tests/cursor_classes/: test_class_cursor.py
tests/data/gitignore/: .gitignore
tests/data/gitignore/ignored/: M.cpp
tests/data/gitignore/inner/: .gitignore
tests/data/hierarchy/diamond/: A1.cpp  B1A2.cpp  YZWCombo.cpp  base.cpp  diamond.cpp
tests/data/hierarchy/mixed/: mixed.cpp
tests/data/inheritance/: Base.cpp
tests/data/inheritance/multiple/: A.cpp  B.cpp  C.cpp
tests/data/inheritance/private/: Base.cpp  Derived.cpp  DerivedDerived.cpp
tests/data/inheritance/protected/: Derived.cpp  DerivedDerived.cpp
tests/data/inheritance/public/: Derived.cpp
tests/data/protected_inheritance/: Derived.cpp  DerivedDerived.cpp
tests/metric_classes/: __init__.py  test_cpp_ext_stats.py  test_number_of_files.py
(+14 files in other folders)
